fix horizontal scrollbar showing after contract purchase slideout

--- a/src/sass/app_2/_common/layout/layouts.scss
+++ b/src/sass/app_2/_common/layout/layouts.scss
@@ -75,6 +75,7 @@
         position: relative;
         margin-left: 16px;
         width: $SIDEBAR_WIDTH;
+        overflow: hidden;
 
         .sidebar-items {
             opacity: 1;
